--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>This is a test</title>
+    <title>This is a test</title>
   </head>
   <body>
-      <p>This is a test</p>
+    <a href="/contact.html">Contact Me</a>
+    <p>This is a test</p>
   </body>
 </html>
