--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>This is a test</title>
+    <title>About me</title>
   </head>
   <body>
-    <a href="/contact.html">Contact Me</a>
-    <p>This is a test</p>
+    <nav>
+      <a href="/">Ryan Kim</a>
+      <a href="/contact.html">Contact Me</a>
+    </nav>
+    
+    <h2>Ryan Kim</h2>
+    <h4>Software Engineer</h4>
+    
+    <h3>About Me</h3>
+    <p>My name is Ryan and blah blah blah filler text lorem ipsum dolor est sit amet</p>
+    <p>Another paragraph lorem ipsum blah blah</p>
+    <p>Insert paragraphs later still just filler text</p>
   </body>
 </html>
