--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<html class="gr__rkim3-emich_github_io">
+	<head>
     <title>About me</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/G:/rkim3-emich.github.io/Styles/github-css.css">
   </head>
-  <body>
+  <body data-gr-c-s-loaded="true">
     <nav>
-      <a href="/">Ryan Kim</a>
-      <a href="/contact.html">Contact Me</a>
+    	<ul class="nav">
+      	<li><a class="links" href="/">Ryan Kim</a></li>
+      	<li><a class="links" href="/">About</a></li>
+      	<li><a class="links" href="/resume.html">Resume</a></li>
+      	<li><a class="links" href="/portfolio.html">Portfolio</a></li>
+    	</ul>
     </nav>
     
-    <h2>Ryan Kim</h2>
-    <h4>Software Engineer</h4>
+    <div class="main">
+    	<h2>Ryan Kim</h2>
+    	<h4>Software Engineer</h4>
     
-    <h3>About Me</h3>
-    <p>My name is Ryan and blah blah blah filler text lorem ipsum dolor est sit amet</p>
-    <p>Another paragraph lorem ipsum blah blah</p>
-    <p>Insert paragraphs later still just filler text</p>
-  </body>
+    	<h3>About Me</h3>
+    	<p>My name is Ryan and I am a programmer.</p>
+    	<p>I create custom solutions for a wide variety of tasks. Web design, android development, server developement, and scripting. Profficient in programming languages like HTML, CSS, JavaScript, Python, Java, and C#. You can view some of my work <a href="/portfolio.html">here</a></p>
+    	<p>Some of my other interests include cyber security, electronics, and low-level programming</p>
+  	</div>
+  
+
+	</body>
 </html>
