--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <ul>To-do
-      <li>Find good programming work examples</li>
-      <li>Take some nice screenshots</li>
-      <li>put them on page</li>
-      <li>Create awesome styling</li>
-      <li>$$$</li>
-    </ul>
-  </body>
+<html class="gr__rkim3-emich_github_io">
+	<head>
+    <title>Portfolio</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/G:/rkim3-emich.github.io/Styles/github-css.css">
+  </head>
+  <body data-gr-c-s-loaded="true">
+    <nav>
+    	<ul class="nav">
+      	<li><a class="links" href="/">Ryan Kim</a></li>
+      	<li><a class="links" href="/">About</a></li>
+      	<li><a class="links" href="/resume.html">Resume</a></li>
+      	<li><a class="links" href="/portfolio.html">Portfolio</a></li>
+    	</ul>
+    </nav>
+	</body>
 </html>
