--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
     <title>About me</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/G:/rkim3-emich.github.io/Styles/github-css.css">
+    <link rel="stylesheet" type="text/css" href="/Styles/github-css.css">
   </head>
   <body data-gr-c-s-loaded="true">
     <nav>
