--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
       	<li><a class="links" href="/">Ryan Kim</a></li>
       	<li><a class="links" href="/">About</a></li>
       	<li><a class="links" href="/resume.html">Resume</a></li>
-      	<li><a class="links" href="/portfolio.html">Portfolio</a></li>
+      	<!--<li><a class="links" href="/portfolio.html">Portfolio</a></li>-->
     	</ul>
     </nav>
     
