--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <html class="gr__rkim3-emich_github_io">
 	<head>
     <title>Resume</title>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/Styles/github-css.css">
   </head>
