--- a/resume.html
+++ b/resume.html
@@ -24,11 +24,11 @@
     	<h2>Web Resume</h2>
     	<div>
     			<h3>Summary</h3>
-    			<p>Hard-working programmer with a passion for crafting real-world solutions in professional software systems and applications. As an avid programmer, worked toward creating scripts to manage staff reports for Hope Clini, a non-profit community cneter in Yposilanti. Looking to use my computer science skill to create real-world solutions through my software</p>
+    			<p>Hard-working programmer with a passion for crafting real-world solutions in professional software systems and applications. As an avid programmer, worked toward creating scripts to manage staff reports for Hope Clinic, a non-profit community center in Ypsilanti. Looking to use my computer science skills to create real-world solutions through my software</p>
     			
     			<h3>Education</h3>
     			<p><strong>Eastern Michigan University</strong>, Ypsilanti, Michigan</p>
-    			<p>Computer Science Major, Enrolled Septermber 2018</p>
+    			<p>Computer Science Major, Enrolled September 2018</p>
     			<p>Courses toward a Bachelor of Science Degree in Computer Science</p>
     			<p>GPA 4.0</p>
     			<br>
