--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     	<p>My name is Ryan and I am a programmer.</p>
     	<p>I create custom solutions for a wide variety of tasks. Web design, android development, server developement, and scripting. Profficient in programming languages like HTML, CSS, JavaScript, Python, Java, and C#. You can view some of my work <a href="/portfolio.html">here</a></p>
     	<p>Some of my other interests include cyber security, electronics, and low-level programming</p>
+    	
+    	<div class="footer">
+  			<hr>
+  			<span>
+  				<a href="https://www.linkedin.com/in/ryan-kim3/"><img src="/Resources/Iinked-in.png" alt="LinkedIn logo"></a>
+  			<span>
+  		</div>
   	</div>
-  
-
 	</body>
 </html>
