--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,12 @@
     			<li>FFMPEG</li>
     		</ul>
     	</div>
+    	<div class="footer">
+  			<hr>
+  			<span>
+  				<a href="https://www.linkedin.com/in/ryan-kim3/"><img src="/Resources/Iinked-in.png" alt="LinkedIn logo"></a>
+  			<span>
+  		</div>
     </div>
 	</body>
 </html>
