--- a/portfolio.html
+++ b/portfolio.html
@@ -1,40 +1,43 @@
 <html class="gr__rkim3-emich_github_io">
 	<head>
-    <title>Portfolio</title>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/Styles/github-css.css">
-  </head>
-  <body data-gr-c-s-loaded="true">
-    <nav>
-    	<ul class="nav">
-      	<li><a class="links" href="/">Ryan Kim</a></li>
-      	<li><a class="links" href="/">About</a></li>
-      	<li><a class="links" href="/resume.html">Resume</a></li>
-      	<li><a class="links" href="/portfolio.html">Portfolio</a></li>
-    	</ul>
-    </nav>
-    
-    <div class="main">
-    	<div>
-    		<img src="/Resources/ScreenCapture.jpg" alt="Loop of same image over again as a result of recording a recording. Demonstration of screen recorder program">
-    		<p><strong>Screen Recorder</strong></p>
-    		<p>A proof of concept screen recorder program written in C#. The program writes video to capture.mp4 using MPEG4 video codec.</p>
-    		<p>Github Repository: <a href="https://github.com/rkim3-emich/ScreenRecorder">https://github.com/rkim3-emich/ScreenRecorder</a></p>
-    		<p><strong>Technologies Used:</strong></p>
-    		<ul> 
-    			<li>C#</li>
-    			<li>Windows Presentation Foundation (WPF)</li>
-    			<li>AForge.NET</li>
-    			<li>FFMPEG</li>
-    		</ul>
-    	</div>
-    	<div class="footer">
-  			<hr>
-  			<span>
-  				<a href="https://www.linkedin.com/in/ryan-kim3/"><img src="/Resources/Iinked-in.png" alt="LinkedIn logo"></a>
-  			<span>
-  		</div>
-    </div>
+    		<title>Portfolio</title>
+    		<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+    		<meta charset="utf-8">
+    		<link rel="stylesheet" type="text/css" href="/Styles/github-css.css">
+  	</head>
+  	<body data-gr-c-s-loaded="true">
+		<nav>
+			<ul class="nav">
+				<li><a class="links" href="/">Ryan Kim</a></li>
+				<li><a class="links" href="/">About</a></li>
+				<li><a class="links" href="/resume.html">Resume</a></li>
+				<li><a class="links" href="/portfolio.html">Portfolio</a></li>
+			</ul>
+		</nav>
+
+		<div class="main">
+			<div>
+				<img src="/Resources/ScreenCapture.jpg" alt="Loop of same image over again as a result of recording a recording. Demonstration of screen recorder program">
+				<p><strong>Screen Recorder</strong></p>
+				<p>A proof of concept screen recorder program written in C#. The program writes video to capture.mp4 using MPEG4 video codec.</p>
+				<p>Github Repository: <a href="https://github.com/rkim3-emich/ScreenRecorder">https://github.com/rkim3-emich/ScreenRecorder</a></p>
+				<p><strong>Technologies Used:</strong></p>
+				<ul> 
+					<li>C#</li>
+					<li>Windows Presentation Foundation (WPF)</li>
+					<li>AForge.NET</li>
+					<li>FFMPEG</li>
+				</ul>
+			</div>
+			<div class="footer">
+				<hr>
+					<span>
+						<a href="https://www.linkedin.com/in/ryan-kim3/"><img src="/Resources/Iinked-in.png" alt="LinkedIn logo"></a>
+					<span>
+					<span>
+						<a href="https://www.github.com/rkim3-emich/"><img src="/Resources/GitHub-Mark-64px.png" alt="Github logo"></a>
+					</span>
+			</div>
+		</div>
 	</body>
 </html>
