--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="footer">
 				<hr>
 				<span>
-					<a href="https://www.linkedin.com/in/ryan-kim3/"><img src="/Resources/Iinked-in.png style="width: 6%;" alt="LinkedIn logo"></a>
+					<a href="https://www.linkedin.com/in/ryan-kim3/"><img src="/Resources/Iinked-in.png" style="width: 6%;" alt="LinkedIn logo"></a>
 				<span>
 				<span>
 					<a href="https://www.github.com/rkim3-emich/"><img src="/Resources/GitHub-Mark-64px.png" alt="Github logo"></a>
