--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,19 @@
 					<li>FFMPEG</li>
 				</ul>
 			</div>
+			<div>
+				<img src="/Resources/TCPMessenger.jpg" alt="Two windows showing a chat between a server and client, image">
+				<p><strong>TCP Messenger</strong></p>
+				<p>A TCP messenger with a client and a server. The server can accept connections from multiple clients at the same time and send messages to all connected clients. It will work over LAN without further work other than opening the executables, but it could be configured to accept connections from outside LAN if you port forward to port 8000 on your local ip.</p>
+				<p>Github Repository: <a href="https://github.com/rkim3-emich/TCPMessenger">https://github.com/rkim3-emich/TCPMessenger</a></p>
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>C#</li>
+					<li>Windows Presentation Foundation (WPF)</li>
+					<li>Threading</li>
+					<li>Sockets</li>
+				</ul>
+    			</div>
 			<div class="footer">
 				<hr>
 				<span>
