--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
 					<li>FFMPEG</li>
 				</ul>
 			</div>
+			<hr class="divider">
 			<div>
 				<img src="/Resources/TCPMessenger.jpg" alt="Two windows showing a chat between a server and client, image">
 				<p><strong>TCP Messenger</strong></p>
