--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,19 @@
 					<li>Sockets</li>
 				</ul>
     			</div>
+			<hr class="divider">
+    			<div>
+				<img src="/Resources/HashComputer.jpg" alt="Webpage that shows two forms, one that computes hashes for files, and one that computes hases of text, image">
+				<p><strong>Hash Computer</strong></p>
+				<p>A webpage that is able to compute the hashes of files and text. You can use it <a href="https://rkim3-emich.github.io/hashComputer.html">here</a>.</p>
+				<p>The program is not hosted in its own repository, but the files are contained in my github pages repository at <a href="https://github.com/rkim3-emich/rkim3-emich.github.io">https://github.com/rkim3-emich/rkim3-emich.github.io</a></p>
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>JavaScript</li>
+					<li>Forge library (to compute hashes)</li>
+					<li>HTML5 file reader API</li>
+				</ul>
+			</div>
 			<div class="footer">
 				<hr>
 				<span>
