--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
 			<p>Or as a Microsoft word file <a href="/Resources/Ryan-Kim-Resume.docx">here</a></p>
 
 			<h2>Contact me</h2>
-			<p>My email address has an rkim3 and an @emich.edu. My email is also on my resume. I suppose if you really wanted to be sure it's the right email, the sha256 of my email is: 96634a59f7a826eb198b680fa60a5d51e4f267c52ce74ffe0dff5efc8fa401be</p>
+			<p>My email address is rkim3 with an @emich.edu ending.</p>
 
 			<h2>Web Resume</h2>
 			<div>
