--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<h3>About Me</h3>
 			<p>My name is Ryan and I am a programmer.</p>
-			<p>I create custom solutions for a wide variety of tasks. Web design, android development, server developement, and scripting. Profficient in programming languages like HTML, CSS, JavaScript, Python, Java, and C#. You can view some of my work <a href="/portfolio.html">here</a></p>
+			<p>I create custom solutions for a wide variety of tasks. Web design, android development, server development, and scripting. Profficient in programming languages like HTML, CSS, JavaScript, Python, Java, and C#. You can view some of my work <a href="/portfolio.html">here</a></p>
 			<p>Some of my other interests include cyber security, electronics, and low-level programming</p>
 
 			<div class="footer">
