--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html class="gr__rkim3-emich_github_io">
 	<head>
-		<title>About me</title>
+		<title>Ryan Kim - Software Engineer</title>
+		<meta name="author" content="Ryan Kim">
 		<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/Styles/github-css.css">
@@ -11,9 +12,10 @@
 				<li><a class="links" href="/">Ryan Kim</a></li>
 				<li><a class="links" href="/">About</a></li>
 				<li><a class="links" href="/resume.html">Resume</a></li>
+				<li><a class="links" href="/transcript.html">Classes</a></li>
 				<li><a class="links" href="/portfolio.html">Portfolio</a></li>
 			</ul>
-		</nav>
+    	</nav>
 
 		<div class="main">
 			<h2>Ryan Kim</h2>
