--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,10 @@
 				<li><a class="links" href="/">Ryan Kim</a></li>
 				<li><a class="links" href="/">About</a></li>
 				<li><a class="links" href="/resume.html">Resume</a></li>
+				<li><a class="links" href="/transcript.html">Classes</a></li>
 				<li><a class="links" href="/portfolio.html">Portfolio</a></li>
 			</ul>
-		</nav>
+    	</nav>
 
 		<div class="main">
 			<div>
