--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,10 @@
 				<li><a class="links" href="/">Ryan Kim</a></li>
 				<li><a class="links" href="/">About</a></li>
 				<li><a class="links" href="/resume.html">Resume</a></li>
+				<li><a class="links" href="/transcript.html">Classes</a></li>
 				<li><a class="links" href="/portfolio.html">Portfolio</a></li>
 			</ul>
-    		</nav>
+    	</nav>
     
 		<div class="main">
 			<h2>Downloads</h2>
@@ -77,41 +78,6 @@
 				<p>Microsoft 70-480 Exam - Programming in HTML 5 with JavaScript and CSS</p>
 				<p>7/10/2019</p>
 			</div>
-			<h2>Transcript</h2>
-			<h3>Fall 2019</h3>
-			<p>MATH 121 - Calculus 2</p>
-			<p>COSC 221 - Computer Organization 1</p>
-			<p>ECON 201 - Principles of Macroeconomics</p>
-			<p>ECA      - Geometry</p>
-			<h3>Winter 2019</h3>
-			<p>MATH 120 - Calculus 1</p>
-			<p>COSC 111 - Introduction to Programming</p>
-			<p>COSC 112 - Introduction to Programming Online Lab</p>
-			<p>WRTG 121 - Composition 2: Researching the Public Experience</p>
-			<h3>Fall 2018</h3>
-			<p>MATH 112 - Topics in Precalculus Math</p>
-			<p>ECA      - Science Methods Lecture - Chem 1</p>
-			<p>ECA      - Science Methods Lab - Chem 1</p>
-			<p>ECA      - US Government</p>
-			<p>ECA      - English 1</p>
-			<h3>Spring 2018</h3>
-			<p>ECA      - Academy Big History (World) C/College Lit</p>
-			<p>ECA      - Academy Science Capstone</p>
-			<p>ECA      - Drama</p>
-			<p>ECA      - Health</p>
-			<p>ECA      - Personal Fitness</p>
-			<h3>Winter 2018</h3>
-			<p>ECA      - Academy Big History (World) B/College Lit</p>
-			<p>ECA      - Academy Science 2</p>
-			<p>ECA      - Academy Seminar B</p>
-			<p>ECA      - Algebra 2</p>
-			<p>ECA      - English 2</p>
-			<h3>Fall 2017</h3>
-			<p>ECA      - Academy Big History (World) A/College Lit</p>
-			<p>ECA      - Academy Science 1</p>
-			<p>ECA      - Academy Seminar</p>
-			<p>ECA      - Academy Math 1</p>
-			<p>ECA      - Academy English 1</p>
 
 			<div class="footer">
 				<hr>
