--- a/brainfuck.html
+++ b/brainfuck.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Brainf*ck Interpreter/title>
+		<title>Brainf*ck Interpreter</title>
 		<meta name="author" content="Ryan Kim">
 		<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
