--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     		<title>Portfolio</title>
     		<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
     		<meta charset="utf-8">
-    		<link rel="stylesheet" type="text/css" href="github-css.css">
+    		<link rel="stylesheet" type="text/css" href="/Styles/github-css.css">
   	</head>
   	<body data-gr-c-s-loaded="true">
 		<nav>
