--- a/portfolio.html
+++ b/portfolio.html
@@ -118,6 +118,25 @@
 					<li>HTML5 canvas graphics (to parse and display image data)</li>
 				</ul>
 			</div>
+			
+			<hr class="divider">
+
+			<p><strong>Conway's Game of Life</strong><input type="button" onclick="expand('cogl')" value="+"></p>
+    			<div id="cogl" style="display: none;">
+				<img src="/Resources/gameOfLife.jpg" alt="Webpage that shows black and white boxes in a stable pattern after running conway's game of life algorithm, image">
+
+				<p>A webpage that randomly sets a gameboard and then applies the rules of Conway's Game of Life to the environment. You can use it <a href="https://rkim3-emich.github.io/gameOfLife.html">here</a>.</p>
+
+				<p>The program is not hosted in its own repository, but the files are contained in my github pages repository at <a href="https://github.com/rkim3-emich/rkim3-emich.github.io">https://github.com/rkim3-emich/rkim3-emich.github.io</a></p>
+
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>JavaScript</li>
+					<li>State evaluation</li>
+					<li>Timing intervals (To handle game speed)</li>
+				</ul>
+			</div>
+			
 			<div class="footer">
 				<hr>
 				<span>
