--- a/gameOfLife.html
+++ b/gameOfLife.html
@@ -12,9 +12,12 @@
 			<ul class="nav">
 				<li><a class="links" href="/">Ryan Kim</a></li>
 			</ul>
-    	</nav>
-    	<div id="content">
-			<h1>Conway's game of life</h1>
+    		</nav>
+    		<div id="content">
+			<div style="margin: 12pt;">
+				<h1 style="display: inline;">Conway's game of life</h1>
+				<button onClick="reset()">Reset</button>
+			</div>
 			<div id="gameboard">
 			</div>
 		</div>
