--- a/portfolio.html
+++ b/portfolio.html
@@ -137,6 +137,23 @@
 				</ul>
 			</div>
 			
+			<hr class="divider">
+
+			<p><strong>Barcode Generator</strong><input type="button" onclick="expand('barcode')" value="+"></p>
+    			<div id="barcode" style="display: none;">
+				<img src="/Resources/barcodeGen.jpg" alt="Webpage that shows barcode in code 128-b format with 'Barcode' as encoded data, image">
+
+				<p>A webpage that creates barcodes in the code 128-b format. You can use it <a href="https://rkim3-emich.github.io/barcodeGen.html">here</a>.</p>
+
+				<p>The program is not hosted in its own repository, but the files are contained in my github pages repository at <a href="https://github.com/rkim3-emich/rkim3-emich.github.io">https://github.com/rkim3-emich/rkim3-emich.github.io</a></p>
+
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>JavaScript</li>
+					<li>Canvas graphics</li>
+					<li>Data Encoding</li>
+				</ul>
+			</div>
 			<div class="footer">
 				<hr>
 				<span>
