--- a/portfolio.html
+++ b/portfolio.html
@@ -154,6 +154,25 @@
 					<li>Data Encoding</li>
 				</ul>
 			</div>
+
+			<hr class="divider">
+
+			<p><strong>Virtual Whiteboardr</strong><input type="button" onclick="expand('whiteboard')" value="+"></p>
+    			<div id="whiteboard" style="display: none;">
+				<img src="/Resources/whiteboard.jpg" alt="Webpage that shows MS paint style graphic of a tree on a sunny day, image">
+
+				<p>A webpage that uses canvas graphics to allow for a virtual whiteboard. You can use it <a href="https://rkim3-emich.github.io/whiteboard.html">here</a>.</p>
+
+				<p>The program is not hosted in its own repository, but the files are contained in my github pages repository at <a href="https://github.com/rkim3-emich/rkim3-emich.github.io">https://github.com/rkim3-emich/rkim3-emich.github.io</a></p>
+
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>JavaScript</li>
+					<li>Canvas graphics</li>
+					<li>Event Listening</li>
+					<li>Coordinates (mouse movement)</li>
+				</ul>
+			</div>
 			<div class="footer">
 				<hr>
 				<span>
