--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
 
 			<hr class="divider">
 
-			<p><strong>Virtual Whiteboardr</strong><input type="button" onclick="expand('whiteboard')" value="+"></p>
+			<p><strong>Virtual Whiteboard</strong><input type="button" onclick="expand('whiteboard')" value="+"></p>
     			<div id="whiteboard" style="display: none;">
 				<img src="/Resources/whiteboard.jpg" alt="Webpage that shows MS paint style graphic of a tree on a sunny day, image">
 
