--- a/ajaxmaker.html
+++ b/ajaxmaker.html
@@ -1,6 +1,6 @@
 <html class="gr__rkim3-emich_github_io">
 	<head>
-		<title>Whiteboard</title>
+		<title>AJAX Call Maker</title>
 		<meta name="author" content="Ryan Kim">
 		<meta name=”viewport” content=”width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
