--- a/portfolio.html
+++ b/portfolio.html
@@ -173,6 +173,24 @@
 					<li>Coordinates (mouse movement)</li>
 				</ul>
 			</div>
+
+			<hr class="divider">
+
+			<p><strong>AJAX Call Maker</strong><input type="button" onclick="expand('ajax')" value="+"></p>
+    			<div id="ajax" style="display: none;">
+				<img src="/Resources/ajaxcallmaker.jpg" alt="Webpage that shows input to set AJAX request parameters on left and the response information after request has been made on the right, image">
+
+				<p>A webpage that allows users to make client-side javascript AJAX calls. It displays response information and the AJAX events that occur during the call. Cross Origin Resource Sharing (CORS) rules may result in AJAX errors occurring. Due to security rules they can not be easily detected but will cause an error with a ready code of 4 and a status of 0. You can use it <a href="https://rkim3-emich.github.io/ajaxcmaker.html">here</a>.</p>
+
+				<p>The program is not hosted in its own repository, but the files are contained in my github pages repository at <a href="https://github.com/rkim3-emich/rkim3-emich.github.io">https://github.com/rkim3-emich/rkim3-emich.github.io</a></p>
+
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>JavaScript</li>
+					<li>AJAX</li>
+					<li>Response Parsing</li>
+				</ul>
+			</div>
 			<div class="footer">
 				<hr>
 				<span>
