--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 			<hr class="divider">
 
 			<p><strong>Hash Computer</strong><input type="button" onclick="expand('hashComputer')" value="+"></p>
-    		<div id="hashComputer" style="display: none;">
+    			<div id="hashComputer" style="display: none;">
 				<img src="/Resources/HashComputer.jpg" alt="Webpage that shows two forms, one that computes hashes for files, and one that computes hases of text, image">
 
 				<p>A webpage that is able to compute the hashes of files and text. You can use it <a href="https://rkim3-emich.github.io/hashComputer.html">here</a>.</p>
@@ -68,7 +68,7 @@
 			<hr class="divider">
 
 			<p><strong>Brainf*ck Interpreter</strong><input type="button" onclick="expand('brainf*ck')" value="+"></p>
-    		<div id="brainf*ck" style="display: none;">
+    			<div id="brainf*ck" style="display: none;">
 				<img src="/Resources/brainfuck.jpg" alt="Webpage that shows brainf*ck code to print hello world to console on left with status of program in top right after execution and hello world printed to console in the bottom right, image">
 
 				<p>A webpage that is able to interpret and execute code written in brainf*ck, an esoteric language. For more information on the language, you can read about it on Wikipedia <a href="https://en.wikipedia.org/wiki/Brainfuck">here</a>. You can use the interpreter <a href="https://rkim3-emich.github.io/brainfuck.html">here</a>.</p>
@@ -86,7 +86,7 @@
 			<hr class="divider">
 
 			<p><strong>LC3 Simulator</strong><input type="button" onclick="expand('lc3')" value="+"></p>
-    		<div id="lc3" style="display: none;">
+    			<div id="lc3" style="display: none;">
 				<img src="/Resources/lc3.jpg" alt="Webpage that shows table of lc3 memory information to print hello world in bottom left, register statuses in top right, and hello world printed to console in bottom right, image">
 
 				<p>A webpage that is able to simulate the little computer 3 (lc3), a theoretical computer commonly used to teach low-level computing especially for introduction computer organization classes. More information can be found at the Wikipedia link <a href="https://en.wikipedia.org/wiki/Little_Computer_3">here</a>. You can use the simulator <a href="https://rkim3-emich.github.io/lc3.html">here</a>.</p>
@@ -104,7 +104,7 @@
 			<hr class="divider">
 
 			<p><strong>CAPTCHA Generator</strong><input type="button" onclick="expand('captcha')" value="+"></p>
-    		<div id="captcha" style="display: none;">
+    			<div id="captcha" style="display: none;">
 				<img src="/Resources/captchaGen.jpg" alt="Webpage that shows distorted handwritten nummber captcha and answer with a green box confirming that the inputted answer is correct, image">
 
 				<p>A webpage that is able to generate a simple CAPTCHA of specified length by combining images of handwritten digits from the MNIST dataset and check if user input matches the captcha. You can use it <a href="https://rkim3-emich.github.io/captcha-gen.html">here</a>.</p>
@@ -189,6 +189,24 @@
 					<li>JavaScript</li>
 					<li>AJAX</li>
 					<li>Response Parsing</li>
+				</ul>
+			</div>
+
+			<hr class="divider">
+
+			<p><strong>Path Navigator</strong><input type="button" onclick="expand('pathing')" value="+"></p>
+    			<div id="pathing" style="display: none;">
+				<img src="/Resources/pathing.jpg" alt="Webpage that shows red square navigating to blue square with the path it's taking represented by black squares, image">
+
+				<p>A webpage that randomly generates a point to navigate to and then calculates, renders, and follows a path to the randomly generated point. You can use it <a href="https://rkim3-emich.github.io/pathing.html">here</a>.</p>
+
+				<p>The program is not hosted in its own repository, but the files are contained in my github pages repository at <a href="https://github.com/rkim3-emich/rkim3-emich.github.io">https://github.com/rkim3-emich/rkim3-emich.github.io</a></p>
+
+				<p><strong>Technologies/Skills Used:</strong></p>
+				<ul> 
+					<li>JavaScript</li>
+					<li>Pathing</li>
+					<li>Dynamic DOM generation</li>
 				</ul>
 			</div>
 			<div class="footer">
