--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,6 @@
 				<a href="https://www.github.com/rkim3-emich/"><img src="/Resources/GitHub-Mark-64px.png" alt="Github logo, image link"></a>
 			</span>
 		</div>
-		<script src="/Resources/portfolio.js"></script>
+		<script src="/Scripts/portfolio.js"></script>
 	</body>
 </html>
